<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AAFirstApp</string>
    <string name="key_info">xXMyKoolKompamyXx</string>
    <string name="user_name">ABOUT</string>
    <string name="news">NEWS</string>
    <string name="user_info">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="default_edit_text_message">Enter a message…</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="atticus_fimch">Atticus Fimch</string>
    <string name="web_toast">No app can open this link</string>
    <string name="no_text">No text</string>
    <string name="no_app_to_send">No app to send email</string>
    <string name="copyright">© 2018 atticus_fimch</string>
    <string name="default_text">default text</string>
    <string name="default_news_input">Enter your text here</string>
    <string name="default_text_body" tools:ignore="Typos">default_text default_text default_text default_text default_text default_text default_text default_text default_text</string>
    <string name="default_date">dd.MM.yyyy</string>
    <string name="category">category</string>
    <string name="title">title</string>
    <string name="retry">RETRY</string>
    <string name="chto_to_poshlo_ne_tak">Chto-to poshlo ne tak…</string>
    <string name="skip">SKIP</string>
    <string name="read_news">read news</string>
    <string name="update_news">update news</string>
    <string name="delete_news">delete news</string>
    <string-array name="categories">
        <item>home</item>
        <item>opinion</item>
        <item>world</item>
        <item>national</item>
        <item>politics</item>
        <item>upshots</item>
        <item>nyregion</item>
        <item>business</item>
        <item>technology</item>
        <item>science</item>
        <item>health</item>
    </string-array>
</resources>
