<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:title="@string/user_name"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@dimen/default_text_size">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/default_list_element_margin"
            android:layout_marginEnd="@dimen/default_list_element_margin">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/news_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:scaleType="centerCrop"
                />

            <include
                layout="@layout/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/default_list_element_margin"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/news_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding_top"
                android:text="@string/category"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding_top"
                android:text="@string/title"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/news_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding_top"
                android:text="@string/user_info"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/news_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding_top"
                android:text="@string/default_date"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size" />

            <include
                layout="@layout/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/default_list_element_margin"
                android:layout_marginTop="@dimen/default_list_element_margin"
                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>