<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:maxLines="3"
        android:text="@string/default_text"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size" />

    <LinearLayout
        android:id="@+id/news_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_marginEnd="@dimen/default_list_element_margin"
        android:layout_marginStart="@dimen/default_list_element_margin"
        android:layout_toStartOf="@+id/news_image"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingTop="@dimen/padding_text"
            android:text="@string/default_text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            android:paddingTop="@dimen/padding_text"
            android:text="@string/default_text_body"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/news_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignBottom="@+id/news_block"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/news_block"
        android:layout_marginEnd="@dimen/default_list_element_margin"
        android:scaleType="centerCrop"
        android:src="@drawable/default_news_image" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/news_block"
        android:layout_marginEnd="@dimen/default_list_element_margin"
        android:layout_marginStart="@dimen/default_list_element_margin"
        android:layout_marginBottom="@dimen/default_list_element_margin"
        android:maxLines="1"
        android:paddingTop="@dimen/padding_text"
        android:text="@string/default_date"
        android:textColor="@color/grey"
        android:textSize="@dimen/default_text_size" />

</RelativeLayout>