<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:scaleType="centerCrop"
        android:src="@drawable/moon_aa" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/key_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/default_list_element_end_padding"
                android:paddingStart="@dimen/default_list_element_start_padding">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/name_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/icon_margin"
                    app:srcCompat="@drawable/ic_key_info" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/key_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/icon_margin"
                    android:paddingBottom="@dimen/default_pdding_bottom"
                    android:paddingTop="@dimen/default_padding_top"
                    android:text="@string/key_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/default_list_element_end_padding"
                android:paddingStart="@dimen/default_list_element_start_padding">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/user_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/icon_margin"
                    app:srcCompat="@drawable/ic_user" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/icon_margin"
                    android:paddingBottom="@dimen/default_pdding_bottom"
                    android:paddingTop="@dimen/default_padding_top"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size" />
            </RelativeLayout>

            <include
                layout="@layout/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="@dimen/default_list_element_margin"
                android:layout_marginStart="@dimen/default_list_element_margin" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_pdding_bottom"
                android:paddingEnd="@dimen/default_list_element_end_padding"
                android:paddingStart="@dimen/default_list_element_start_padding"
                android:paddingTop="@dimen/default_padding_top"
                android:text="@string/user_info"
                android:textAlignment="viewStart"
                android:textColor="@color/grey"
                android:textSize="@dimen/small_text_size" />

            <include
                layout="@layout/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="@dimen/default_list_element_margin"
                android:layout_marginStart="@dimen/default_list_element_margin" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_edit_text_margin"
                android:layout_marginStart="@dimen/default_edit_text_margin"
                android:imeOptions="actionDone"
                android:paddingTop="@dimen/default_padding_top"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size"
                android:hint="@string/default_edit_text_message" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/default_list_element_margin"
                android:background="@color/transparent"
                android:layout_marginTop="@dimen/default_button_margin"
                android:text="@string/send_message"
                android:textColor="@color/divider_color"
                android:textColorHint="@color/black"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_list_element_margin"
                android:layout_marginStart="@dimen/default_list_element_margin"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/default_pdding_bottom"
                android:paddingEnd="@dimen/social_padding"
                android:paddingStart="@dimen/social_padding"
                android:paddingTop="@dimen/default_padding_top">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/telegram"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/social_ic_margin"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_telegram"
                    android:focusable="true"
                    style="@style/Widget.AppCompat.ActionButton"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/instagram"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/social_ic_margin"
                    android:layout_marginStart="@dimen/social_ic_margin"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_instagram"
                    android:focusable="true"
                    style="@style/Widget.AppCompat.ActionButton"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/twitter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/social_ic_margin"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_twitter"
                    android:focusable="true"
                    style="@style/Widget.AppCompat.ActionButton"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/copyright"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>